# RubberDucky_-UCKY_updated

examples/usb_ducky/: CMakeLists.txt  hw_config.c  main.c  usb_descriptors.c
examples/usb_ducky/include/: tusb_config.h
examples/usb_mass_storage/: main.c  usb_descriptors.c
examples/usb_mass_storage/include/: tusb_config.h
